reco chapter updated

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1122,3 +1122,163 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       year           = "2008",
       SLACcitation   = "%%CITATION = JINST,3,S08004;%%",
 }
+
+@techreport{CMS-PAS-PFT-09-001,
+      title         = "{Particle-Flow Event Reconstruction in CMS and Performance
+                       for Jets, Taus, and MET}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "2009. Geneva",
+      number        = "CMS-PAS-PFT-09-001",
+      month         = "Apr",
+      year          = "2009",
+}
+
+@article{Chatrchyan:2014fea,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Description and performance of track and primary-vertex
+                        reconstruction with the CMS tracker}",
+      collaboration  = "CMS",
+      journal        = "JINST",
+      number         = "10",
+      volume         = "9",
+      pages          = "P10009",
+      doi            = "10.1088/1748-0221/9/10/P10009",
+      year           = "2014",
+      eprint         = "1405.6569",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "CMS-TRK-11-001, CERN-PH-EP-2014-070",
+      SLACcitation   = "%%CITATION = ARXIV:1405.6569;%%",
+}
+
+@article{Fruhwirth:1987fm,
+      author         = "Fruhwirth, R.",
+      title          = "{Application of Kalman filtering to track and vertex
+                        fitting}",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A262",
+      pages          = "444-450",
+      doi            = "10.1016/0168-9002(87)90887-4",
+      year           = "1987",
+      reportNumber   = "HEPHY-PUB-87-503",
+      SLACcitation   = "%%CITATION = NUIMA,A262,444;%%",
+}
+
+@article{Adzic:2008zza,
+      author         = "Adzic, P. and others",
+      title          = "{Intercalibration of the barrel electromagnetic
+                        calorimeter of the CMS experiment at start-up}",
+      collaboration  = "CMS Electromagnetic Calorimeter Group",
+      journal        = "JINST",
+      volume         = "3",
+      pages          = "P10007",
+      doi            = "10.1088/1748-0221/3/10/P10007",
+      year           = "2008",
+      reportNumber   = "CERN-CMS-NOTE-2008-018",
+      SLACcitation   = "%%CITATION = JINST,3,P10007;%%",
+}
+
+@techreport{Cankocak:1127315,
+      author        = "Cankocak, Kerem and Onel, Yasar and de Barbaro, Pawel and
+                       Vishnevskiy, Dima",
+      title         = "{CMS HCAL Installation and Commissioning}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-CR-2008-047",
+      month         = "Jul",
+      year          = "2008",
+}
+
+@techreport{Malberti:1358839,
+      author        = "Malberti, Martina",
+      title         = "{Commissioning of the CMS ECAL calibration with muons from
+                       cosmic rays and beam dumps}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-CR-2009-339",
+      month         = "Nov",
+      year          = "2009",
+}
+
+@article{Chatrchyan:1223950,
+      author        = "Chatrchyan, and others",
+      title         = "{Performance of the CMS Hadron Calorimeter with Cosmic Ray
+                       Muons and LHC Beam Data}",
+      journal       = "J. Instrum.",
+      collaboration = "CMS Collaboration",
+      number        = "arXiv:0911.4991. CMS-CFT-09-009",
+      volume        = "5",
+      pages         = "T03012 . 35 p",
+      month         = "Nov",
+      year          = "2009",
+}
+
+@article{Chatrchyan:1554142,
+      author        = "Chatrchyan, and others",
+      title         = "{Energy calibration and resolution of the CMS
+                       electromagnetic calorimeter in pp collisions at $\sqrt{s}$
+                       = 7 TeV}",
+      journal       = "J. Instrum.",
+      collaboration = "CMS Collaboration",
+      number        = "arXiv:1306.2016. CMS-EGM-11-001. CERN-PH-EP-2013-097",
+      volume        = "8",
+      pages         = "P09009. 51 p",
+      month         = "Jun",
+      year          = "2013",
+      note          = "Comments: Submitted to JINST",
+}
+
+@article{CMS-DP-2010-025,
+      title         = "{HCAL performance from first collisions data}",
+      collaboration = "CMS Collaboration",
+      month         = "Jul",
+      year          = "2010",
+}
+
+@techreport{CMS-PAS-PFT-10-003,
+      title         = "{Particle-flow commissioning with muons and electrons
+                       from
+  J/Psi and W events at 7 TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "2010. Geneva",
+      number        = "CMS-PAS-PFT-10-003",
+      year          = "2010",
+}
+
+@article{Adam:2005bya,
+      author         = "Adam, Wolfgang and Frühwirth, R. and Strandlie, Are and
+                        Todor, T.",
+      title          = "{Reconstruction of Electrons with the Gaussian-Sum Filter
+                        in the CMS Tracker at the LHC}",
+      year           = "2005",
+      reportNumber   = "CMS-NOTE-2005-001, CERN-CMS-NOTE-2005-001",
+      SLACcitation   = "%%CITATION = CMS-NOTE-2005-001 ETC.;%%",
+}
+
+@article{Cacciari:2008gp,
+      author         = "Cacciari, Matteo and Salam, Gavin P. and Soyez, Gregory",
+      title          = "{The Anti-k(t) jet clustering algorithm}",
+      journal        = "JHEP",
+      volume         = "0804",
+      pages          = "063",
+      doi            = "10.1088/1126-6708/2008/04/063",
+      year           = "2008",
+      eprint         = "0802.1189",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LPTHE-07-03",
+      SLACcitation   = "%%CITATION = ARXIV:0802.1189;%%",
+}
+
+@techreport{CMS-PAS-PFT-10-002,
+      title         = "{Commissioning of the Particle-Flow reconstruction in
+                       Minimum-Bias and Jet Events from pp Collisions at 7 TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-PFT-10-002",
+      year          = "2010",
+}
